appId: "com.recipedia"
---
- tapOn:
    id: "BottomTabs::Parameters"
    label: "Navigate to Parameters screen"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "Parameters::Section::Import::FromWebsite::Item"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to Bulk Import section"

- waitForAnimationToEnd

- tapOn:
    id: "Parameters::Section::Import::FromWebsite::Item"
    label: "Open Bulk Import settings"
