appId: "com.recipedia"
---
- tapOn:
    id: "SearchScreen::FiltersToggleButtons"
    label: "Open the filter page"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "SearchScreen::FilterAccordion::Accordion::0"
    direction: DOWN
    speed: 50
    centerElement: true
    label: "Scroll to season accordion"

- waitForAnimationToEnd

- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::0"
    label: "Expand on season accordion"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "SearchScreen::FilterAccordion::Accordion::0::Item::0"
    direction: DOWN
    speed: 50
    centerElement: true
    label: "Scroll to first season filter item"

- waitForAnimationToEnd

- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::0::Item::0"
    label: "Apply filter on the seasonality"

- tapOn:
    id: "SearchScreen::FiltersToggleButtons"
    label: "Close the filter page"
