appId: "com.recipedia"
---
- tapOn:
    id: "SearchScreen::FiltersToggleButtons"
    label: "Open the filter page"

- scrollUntilVisible:
    element:
      id: "SearchScreen::FilterAccordion::Accordion::5"
    direction: DOWN
    speed: 70
    centerElement: true
    label: "Scroll down to find vegetable type filter"

- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::5"
    label: "Expand Vegetable accordion"

- scrollUntilVisible:
    element:
      id: "SearchScreen::FilterAccordion::Accordion::5::Item::7"
    direction: DOWN
    speed: 70
    centerElement: true
    label: "Scroll down to find the new ingredient"

- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::5::Item::7"
    label: "Apply filter on the new ingredient"

- scrollUntilVisible:
    element:
      id: "SearchScreen::SearchBar"
    direction: UP
    speed: 95
    centerElement: true
    label: "Scroll back to top of Search screen"


- tapOn:
    id: "SearchScreen::FiltersToggleButtons"
    label: "Close the filter page"
