appId: "com.recipedia"
---
- tapOn:
    id: "BottomTabs::Search"
    label: "Navigate to Search screen"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "SearchScreen::RecipeCards::1::Spaghetti Bolognese"
    direction: UP
    speed: 20
    timeout: 60000
    centerElement: true
    label: "Scroll to Spaghetti Bolognese recipe"

- waitForAnimationToEnd

- tapOn:
    id: "SearchScreen::RecipeCards::1::Spaghetti Bolognese"
    label: "Open Spaghetti Bolognese recipe"

- tapOn:
    id: "Recipe::BottomActionButton"
    label: "Add recipe to menu"

- runFlow:
    file: "../../asserts/alerts/en/addingRecipeToMenu.yaml"
    env:
      RECIPE_NAME: "Spaghetti Bolognese"
    label: "Verify recipe added alert"

- runFlow:
    file: "../search/scrollBackToTop.yaml"
    label: "Scroll back to top"
