appId: "com.recipedia"
---
- tapOn:
    id: "IngredientsSettings::BottomActionButton"
    label: "Open Add ingredient dialog"

- extendedWaitUntil:
    visible:
      id: "IngredientsSettings::ItemDialog::AddModal::.*"
    timeout: 20000
    label: "Wait for modal to appear"

- tapOn:
    id: "IngredientsSettings::ItemDialog::AddModal::CancelButton"
    label: "Cancel adding ingredient without entering name"

- extendedWaitUntil:
    notVisible:
      id: "IngredientsSettings::ItemDialog::AddModal::.*"
    timeout: 20000
    label: "Wait for modal to appear"

- runFlow:
    file: "../../../asserts/parameters/ingredients/en/assertIngredientsSettingsScreen.yaml"
    label: "Verify returned to Ingredients Settings screen"
