appId: "com.recipedia"
---
- runFlow:
    file: "../searchInSettingsList.yaml"
    env:
      SETTINGS_SCREEN: "IngredientsSettings"
      SEARCH_QUERY: "Spaghetti"
    label: "Search for Spaghetti ingredient"

- assertVisible:
    id: "IngredientsSettings::1::IngredientName"
    text: "Spaghetti"
    label: "Verify Spaghetti ingredient is displayed"

- tapOn:
    id: "IngredientsSettings::1::DeleteButton"
    label: "Open Delete dialog for Spaghetti ingredient"

- runFlow:
    file: "../../../asserts/parameters/ingredients/en/assertDeleteModalOpen.yaml"
    label: "Verify Delete confirmation modal is displayed"

- tapOn:
    id: "IngredientsSettings::ItemDialog::DeleteModal::CancelButton"
    label: "Cancel delete operation"

- assertVisible:
    id: "IngredientsSettings::1::IngredientName"
    text: "Spaghetti"
    label: "Verify ingredient still exists after cancel delete"

- tapOn:
    id: "IngredientsSettings::SearchBar-clear-icon"
    label: "Clear the search bar"

- extendedWaitUntil:
    visible:
      id: "IngredientsSettings::27::IngredientName"
    timeout: 60000
    label: "Wait for list to show all items"
